# numerical-calculation

./: CMakeLists.txt  README.md  main.cpp
include/: common.h  determinant.h  matrix.h
source/: common.cpp  determinant.cpp  matrix.cpp
